--- a/web/src/quickstart.html
+++ b/web/src/quickstart.html
@@ -106,7 +106,7 @@ title: Smile - Quick Start
 
   Welcome to Smile Shell; enter 'help&lt;RETURN&gt;' for list of supported commands.
   Type "exit&lt;RETURN&gt;" to leave the Smile Shell
-  Version 2.1.0, Scala 2.13.1, SBT 1.2.8, Built at 2019-11-20 20:04:41.868
+  Version 4.0.0, Scala 2.13.14, SBT 1.9.9 built at 2024-07-03 09:52:24.404-0400
 ===============================================================================
 smile&gt;
     </code></pre>
@@ -234,10 +234,21 @@ smile&gt;
 
             <p>When the shell starts, we should see something like the following:</p>
             <pre class="prettyprint lang-java"><code>
-    |  Welcome to JShell -- Version 11.0.6
-    |  For an introduction type: /help intro
+                                                       ..::''''::..
+                                                     .;''        ``;.
+     ....                                           ::    ::  ::    ::
+   ,;' .;:                ()  ..:                  ::     ::  ::     ::
+   ::.      ..:,:;.,:;.    .   ::   .::::.         :: .:' ::  :: `:. ::
+    '''::,   ::  ::  ::  `::   ::  ;:   .::        ::  :          :  ::
+  ,:';  ::;  ::  ::  ::   ::   ::  ::,::''.         :: `:.      .:' ::
+  `:,,,,;;' ,;; ,;;, ;;, ,;;, ,;;, `:,,,,:'          `;..``::::''..;'
+                                                       ``::,,,,::''
+|  Welcome to Smile  -- Version  4.0.0
+===============================================================================
+|  Welcome to JShell -- Version 21.0.3
+|  For an introduction type: /help intro
 
-    jshell>
+smile>
     </code></pre>
             <p>We pre-import Smile's definitions in JShell. To exit the shell, type <code>/exit</code>.</p>
 
@@ -246,23 +257,23 @@ smile&gt;
             <p>With local variable type inference, it is easy to use JShell as a calculator.</p>
 
             <pre class="prettyprint lang-java"><code>
-    jshell> "Hello, World"
+    smile> "Hello, World"
     $2 ==> "Hello, World"
 
-    jshell> 2
+    smile> 2
     $3 ==> 2
 
-    jshell> 2+3
+    smile> 2+3
     $4 ==> 5
     </code></pre>
 
             <p>We can also define variables and reuse them.</p>
 
             <pre class="prettyprint lang-java"><code>
-    jshell> var x = 2 + 3
+    smile> var x = 2 + 3
     x ==> 5
 
-    jshell> var y = 2 * (x + 1)
+    smile> var y = 2 * (x + 1)
     y ==> 12
     </code></pre>
 
